# dinner-party-planner

./: .gitignore  README.md  app.py  auth.py.txt  mini_app.py  mini_app_crewai.py  mini_app_no_crewai.py  pyproject.toml  requirements.txt
examples/: langraph-books.py
examples/book_recommendations/: app.py  auth.py  config.py  models.py  utils.py
examples/book_recommendations/agents/: __init__.py  book_agent.py  cross_domain_agent.py
failed-attempts/: books-crew-openai-fn.py
