[project]
name = "dinner-party-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.95.0",
    "langchain>=0.3.14",
    "langchain-core>=0.3.30",
    "langchain-openai>=0.3.1",
    "langgraph>=0.2.64",
    "openai>=1.59.7",
    "pydantic>=2.10.5",
    "python-dotenv>=1.0.1",
    "streamlit>=1.41.1",
    "watchdog>=6.0.0",
]
